--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ So let's cut this thing open – using "tmesis" as the Ancient Greeks would call
 
 <div class="textblock">
   <h2>Family and Home</h2>
-    
+    <div class="parallax", style="background-image: url('family.JPG')"></div>
 
 <!--Show us. Find those beautiful, meaningful "family" photos and pictures of your place (only you can define family). If you are concerned about issues of privacy, you can always use stock images, or get creative. Add these photos to your project folder, making sure the files end in .jpg or .png and replace the names in the grid code below. You can add more images if you wish, or subtract...you might also need to move content around to achieve balance. See what happens – sometimes you have to be playful to find the purpose of things. Since these images are smaller, you will want to resize your images to less than 600px in width. This will improve load time and thus general accesibility. Don't forget to add alt="text"-->
 
@@ -75,14 +75,16 @@ So let's cut this thing open – using "tmesis" as the Ancient Greeks would call
   <div class="column" height:150px>
     <img src="Mom.JPG" alt="a picture of family members standing together for a wedding photo" >
     <img src="ally.JPG" alt="two young women standing with arms around each other at a Pitt football game">
+    <img src="milo.jpeg" alt="">
   </div>
-  <div class="column" height:150px>
+  <div class="column" height:100px>
     <img src="sab.JPG" alt="describe the image HERE for accessibility purposes"> 
-    <img src="family.JPG" alt="describe the image HERE for accessibility purposes">
+    <img src="zoey.jpeg" alt="">
   </div>
   <div class="column" height:150px>
     <img src="dad.JPG" alt="describe the image HERE for accessibility purposes">
     <img src="cousins.JPG" alt="describe the image HERE for accessibility purposes">
+    <img src="pets.jpeg" alt="">
   </div>
 </div>
 
@@ -103,7 +105,7 @@ So let's cut this thing open – using "tmesis" as the Ancient Greeks would call
 <!--find a YouTube video that has some significance in your life. Click "share," and copy and paste the embed link and paste it below-->
 
   <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=YcHOxhGNq3g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/67RsuiTEYEl5fX7iI2PQra?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </div>
 <!--Add a quick caption or description of your video-->
     <p>Lorem ipsum</p>
@@ -120,8 +122,6 @@ FUN FACT: "Lorem ipsum", "Lorem ipsum" was hacked out of Cicero's "De finibus bo
 
 <!--We will use this next section to process your community(-ies)-->
 
-<div class="textblock">
-  <h2>Community</h2>
 
 <!--So what exactly is your community: is it actual? virtual? Where do find your ground, or at least, where do you drop anchor, you drifter, you? While we often think of communities as neighborhoods and clubs and a group of colleagues or friends, you might find community across the frontiers of the dead, and perhaps even with those who have never lived. I'll let you explain. -->
 
@@ -137,8 +137,7 @@ FUN FACT: "Lorem ipsum", "Lorem ipsum" was hacked out of Cicero's "De finibus bo
 
     <!--To change the image for this wide screen paralax scroll, you will need change the file name in your style.css to match an image in your project folder. Look for ".paral1ax" on your style.css sheet-->
 
-<div class="parallax"
-     image>
+    
 
 <!--What happens if you put another div inside this parallax section? Get rid of the comment notation to find out!-->
 
